<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".persegi">

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/persegi"
        />

    <EditText
        android:id="@+id/edit_persegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gambar"
        android:textSize="25sp"
        android:textAlignment="center"
        android:hint="@string/sisi"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_hitungpersegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/hitung_persegi"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/edit_persegi"
        />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_hitungpersegi">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/keliling_persegi"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/kelilingPersegi"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="center"
            android:text="@string/_0"
            android:textSize="20sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_hitungpersegi"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/luas_persegi"
            android:textSize="25sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/luasPersegi"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="center"
            android:text="@string/_0"
            android:textSize="20sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>